# pixytoon

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  bump_version.ps1  setup.bat  setup.ps1  start.bat  start.ps1
docs/: API-REFERENCE.md  AUDIO-REACTIVITY.md  AUDIO.md  CONFIGURATION.md  COOKBOOK.md  GUIDE.md  LIVE-PAINT.md  PROMPT_SCHEDULE_DSL.md  RECIPES.md  REFERENCE.md  SOURCES.md  TROUBLESHOOTING.md
docs/plans/: 2026-03-25-audio-reactivity-sync.md  2026-03-25-documentation-audit.md
extension/: package.json
extension/keys/: pixytoon.aseprite-keys  sddj.aseprite-keys
extension/scripts/: json.lua  pixytoon.lua  pixytoon_dialog.lua  pixytoon_handler.lua  pixytoon_import.lua  pixytoon_live.lua  pixytoon_output.lua  pixytoon_request.lua  pixytoon_settings.lua  pixytoon_state.lua  pixytoon_ws.lua  sddj.lua  sddj_base64.lua  sddj_capture.lua  sddj_dialog.lua  sddj_dsl_editor.lua  sddj_dsl_parser.lua  sddj_handler.lua  sddj_import.lua  sddj_live.lua  sddj_output.lua  sddj_request.lua  sddj_settings.lua  sddj_state.lua  sddj_utils.lua  sddj_ws.lua  test_dsl_parser.lua
scripts/: build_extension.py  download_models.py  test_animation.py  test_generate.py  test_inpaint.py
server/: .env.example  pyproject.toml  run.py
server/data/prompts/: accessory.json  artist.json  background.json  camera.json  colors.json  descriptor.json  details.json  lighting.json  material.json  mood.json  moods.json  negatives.json  outfit.json  pose.json  quality.json  style.json  styles.json  subject.json  templates.json
server/palettes/: aap64.json  african.json  anime_pastel.json  arctic.json  arne16.json  art_deco.json  autumn.json  baroque.json  bauhaus.json  bubblegum16.json  c64.json  candy.json  catppuccin_mocha.json  cyberpunk.json  dawnbringer16.json  dawnbringer32.json  desert.json  dracula.json  earth_tones.json  endesga32.json  endesga64.json  film_noir.json  forest.json  gameboy.json  ghibli.json  gothic.json  gruvbox.json  impressionist.json  indian.json  japanese_traditional.json  material_design.json  minecraft.json  monokai.json  moroccan.json  nes.json  nordic.json  nyx8.json  ocean.json  oil6.json  oil_painting.json  (+20 more)
server/pixytoon/: __init__.py  animatediff_manager.py  audio_analyzer.py  audio_cache.py  auto_calibrate.py  config.py  deepcache_manager.py  engine.py  image_codec.py  lora_fuser.py  lora_manager.py  modulation_engine.py  palette_manager.py  pipeline_factory.py  postprocess.py  prompt_generator.py  protocol.py  rembg_wrapper.py  server.py  stem_separator.py  ti_manager.py  video_export.py
server/presets/: anime.json  character.json  concept_art.json  illustration.json  landscape.json  pixel_art.json  realistic.json
server/scripts/: audit_data.py  build_artist_tags.py  build_prompt_data.py  classify_subjects.py  verify_optimizations.py
server/sddj/: __init__.py  animatediff_manager.py  audio_analyzer.py  audio_cache.py  auto_calibrate.py  config.py  deepcache_manager.py  dsl_parser.py  embedding_blend.py  engine.py  expression_presets.py  freeu_applicator.py  image_codec.py  lora_fuser.py  lora_manager.py  modulation_engine.py  oklab.py  palette_manager.py  pipeline_factory.py  postprocess.py  presets_manager.py  prompt_generator.py  prompt_schedule.py  prompt_schedule_presets.py  protocol.py  rembg_wrapper.py  resource_manager.py  scheduler_factory.py  server.py  stem_separator.py  ti_manager.py  validation.py  video_export.py  vram_utils.py
server/sddj/engine/: animation.py  audio_reactive.py  compile_utils.py  core.py  helpers.py
server/tests/: conftest.py  test_audio_analyzer.py  test_audio_cache.py  test_auto_calibrate.py  test_compile_utils.py  test_config.py  test_deepcache_manager.py  test_dsl_parser.py  test_helpers.py  test_image_codec.py  test_lora_fuser.py  test_modulation_engine.py  test_palette_manager.py  test_postprocess.py  test_presets.py  test_prompt_generator.py  test_prompt_schedule.py  test_prompt_schedule_keyframes.py  test_protocol.py  test_resource_management.py  test_resource_manager.py  test_sddj_dsl_parser.py  test_server_integration.py  test_stem_separator.py  test_validation.py  test_video_export.py  test_vram_utils.py
server/tests/integration/: __init__.py  _test_lib.py  test_animation.py  test_generate.py  test_health.py  test_inpaint.py
