[project]
name = "pixytoon-server"
version = "0.1.2"
description = "Local SOTA pixel art generation and animation server for Aseprite via Stable Diffusion"
requires-python = ">=3.11,<3.14"
license = "MIT"
dependencies = [
    # Web server
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "websockets>=14",
    # Diffusion engine
    "torch>=2.4",
    "diffusers>=0.31",
    "transformers>=4.45",
    "accelerate>=0.34",
    "safetensors>=0.4",
    "peft>=0.13",
    # Speed optimizations
    "DeepCache>=0.1",
    "triton-windows>=3.2,<3.7; sys_platform == 'win32'",
    "triton>=3.2; sys_platform != 'win32'",
    # Post-processing
    "Pillow>=11",
    "scikit-learn>=1.5",
    "scikit-image>=0.24",
    "scipy>=1.13",
    "numpy>=1.26",
    "numba>=0.60",
    "huggingface_hub>=0.25",
    # Background removal
    "rembg>=2.0",
    "onnxruntime>=1.17",
    # Config
    "pydantic-settings>=2.5",
]

[project.optional-dependencies]
xformers = ["xformers>=0.0.28"]

[project.scripts]
pixytoon-server = "pixytoon.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pixytoon"]

# ── uv: force PyTorch CUDA 12.8 builds ──────────────────────
[tool.uv]
extra-index-url = ["https://download.pytorch.org/whl/cu128"]
